<resources>
    <string name="app_name">Inertial Sensors</string>
    <string name="title_accelerometer">Akcelerometr</string>
    <string name="title_gyroscope">Żyroskop</string>
    <string name="title_magnetometer">Magnetometr</string>

    <string name="nav_header_title">Sensory Inercyjne</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ustawienia</string>

    <string name="menu_sensorsdata">Sensory</string>
    <string name="menu_orientation">Orientacja</string>
    <string name="menu_compass">Kompas</string>
    <string name="menu_bubblelevel">Poziomica</string>
    <string name="menu_pedometer">Licznik kroków</string>
    <string name="menu_movement">Przemieszczenie</string>

    <string name="steps_count">Ilość kroków: </string>

    <string name="movement">Przemieszczenie</string>
    <string name="movement_x">x:</string>
    <string name="movement_y">y:</string>
    <string name="movement_z">z:</string>
    <string name="velocity">Prędkość</string>
    <string name="velocity_x">x:</string>
    <string name="velocity_y">y:</string>
    <string name="velocity_z">z:</string>

    <!-- Tabs titles-->
    <string name="tab_text_1">Trasa</string>
    <string name="tab_text_2">Wykresy</string>

    <!-- Trends Spinner axis choose elements -->
    <string-array name="trends_spinner_axis">
        <item>Wybrana oś: X</item>
        <item>Wybrana oś: Y</item>
        <item>Wybrana oś: Z</item>
    </string-array>

    <string name="title_activity_settings">Ustawienia</string>

    <!-- Preference Titles -->
    <string name="complementary_filter_header">Filtr komplementarny</string>
    <string name="app_config_header">Algorytm wyznaczania orientacji</string>
    <string name="accelerometer_config_header">Akcelerometr</string>
    <string name="magnetometer_config_header">Magnetometr</string>
    <string name="step_detect_algorithm_header">Algorytm detekcji kroku</string>
    <string name="madgwick_filter_header">Filtr Madgwick"'"a</string>
    <string name="mahony_filter_header">Filtr Mahony"'"ego</string>
    <string name="kalman_filter_header">Filtr Kalmana</string>

    <!-- App configuration Preferences -->
    <string name="selected_algorithm">Wybór algorytmu</string>

    <!-- Complementary fiter Preferences -->
    <string name="compl_filter_par_alfa">Współczynnik alfa</string>

    <!-- Accelerometer Preferences -->
    <string name="accelerometer_filter_enable">Filtr dolnoprzepustowy</string>
    <string name="accelerometer_filter_gain">Wzmocnienie filtra</string>

    <!-- Magnetometer Preferences -->
    <string name="magnetometer_filter_enable">Filtr dolnoprzepustowy</string>
    <string name="magnetometer_filter_gain">Wzmocnienie filtra</string>

    <!-- Step detect Preferences -->
    <string name="step_detect_window_width">Szerokość okna uśredniania</string>
    <string name="step_detect_threshold_1">Próg 1</string>
    <string name="step_detect_threshold_2">Próg 2</string>

    <!-- Madgwick fiter Preferences -->
    <string name="madgwick_par_beta">Współczynnik beta</string>

    <!-- Mahony fiter Preferences -->
    <string name="mahony_par_kp">Wzmocnienie Kp</string>
    <string name="mahony_par_ki">Wzmocnienie Ki</string>

    <!-- Kalman fiter Preferences -->
    <string name="kalman_par_q_angle">Wariancja procesu Q: kąt</string>
    <string name="kalman_par_q_bias">Wariancja procesu Q: bias</string>
    <string name="kalman_par_r">Wariancja pomiaru R</string>
</resources>
