<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/app_config_header">
        <ListPreference
            app:defaultValue="system_default_algorithm"
            app:entries="@array/algorithms_entries"
            app:entryValues="@array/algorithms_values"
            app:key="selected_algorithm"
            app:title="@string/selected_algorithm"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>


    <PreferenceCategory app:title="@string/complementary_filter_header">
        <EditTextPreference
            app:defaultValue="0.8"
            app:key="compl_filter_par_alfa"
            app:title="@string/compl_filter_par_alfa"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/kalman_filter_header">
        <EditTextPreference
            app:defaultValue="0.00001"
            app:key="kalman_par_q_angle"
            app:title="@string/kalman_par_q_angle"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue="0.00003"
            app:key="kalman_par_q_bias"
            app:title="@string/kalman_par_q_bias"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue="0.0002"
            app:key="kalman_par_r"
            app:title="@string/kalman_par_r"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/madgwick_filter_header">

        <EditTextPreference
            app:defaultValue="0.1"
            app:key="madgwick_par_beta"
            app:title="@string/madgwick_par_beta"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/mahony_filter_header">
        <EditTextPreference
            app:defaultValue="1.0"
            app:key="mahony_par_kp"
            app:title="@string/mahony_par_kp"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue="0.0"
            app:key="mahony_par_ki"
            app:title="@string/mahony_par_ki"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/accelerometer_config_header">
        <SwitchPreference
            app:defaultValue="false"
            app:key="accelerometer_filter_enable"
            app:title="@string/accelerometer_filter_enable"
            app:useSimpleSummaryProvider="true"></SwitchPreference>
        <EditTextPreference
            app:defaultValue="0.95"
            app:key="accelerometer_low_pass_gain"
            app:title="@string/accelerometer_filter_gain"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/magnetometer_config_header">
        <SwitchPreference
            app:defaultValue="false"
            app:key="magnetometer_filter_enable"
            app:title="@string/magnetometer_filter_enable"
            app:useSimpleSummaryProvider="true"></SwitchPreference>
        <EditTextPreference
            app:defaultValue="0.95"
            app:key="magnetometer_low_pass_gain"
            app:title="@string/magnetometer_filter_gain"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/step_detect_algorithm_header">
        <EditTextPreference
            app:defaultValue="50"
            app:key="step_detect_algorithm_window_width"
            app:title="@string/step_detect_window_width"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue="2"
            app:key="step_detect_algorithm_threshold_1"
            app:title="@string/step_detect_threshold_1"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue="1"
            app:key="step_detect_algorithm_threshold_2"
            app:title="@string/step_detect_threshold_2"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory></PreferenceCategory>

</PreferenceScreen>
