<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_accelerometer">

    <fragment
        android:id="@+id/navigation_accelerometer"
        android:name="com.dandrzas.inertialsensorsviewer.MVVM.View.AccelerometerFragment"
        android:label="@string/title_accelerometer"
        tools:layout="@layout/fragment_accelerometer" />
    <fragment
        android:id="@+id/navigation_gyroscope"
        android:name="com.dandrzas.inertialsensorsviewer.MVVM.View.GyroscopeFragment"
        android:label="@string/title_gyroscope"
        tools:layout="@layout/fragment_gyroscope" />

    <fragment
        android:id="@+id/navigation_magnetometer"
        android:name="com.dandrzas.inertialsensorsviewer.MVVM.View.MagnetometerFragment"
        android:label="@string/title_magnetometer"
        tools:layout="@layout/fragment_magnetometer" />
</navigation>